add basic html structure for game and score-area

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>High Card</title>
 </head>
 <body>
-    
+    <h1 class="heading">High Card</h1>
+    <div class="game-area">Game Area
+
+    </div>
+
+    <div class="score-area">Score Area
+        <p class="scores">Player Score: <span id="playerscore">0</span></p>
+        <p class="scores">CPU Score: <span id="cpuscore">0</span></p>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
