add styling on game and card area

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 </head>
 <body>
     <h1 class="heading">High Card</h1>
-    <div class="game-area">Game Area
+
+    <div class="game-area">
+
+        <div class="card-area">
+            <div class="playercard">Player Card</div>
+            <div class="cpucard">CPU Card</div>
+            <div>Start <button class="btn">P L A Y</button></div>
+            
+        </div>
 
     </div>
 
