--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <h1 class="heading">High Card</h1>
 
     <div class="game-area">
-
+        <p>Press play to draw a card, the one who gets the highest card wins!</p>
         <div class="card-area">
             <div class="playercard">Player Card</div>
             <div class="cpucard">CPU Card</div>
-            <div>Start <button class="btn">P L A Y</button></div>
+            <div class="btn-div">Start <button class="btn">Play</button></div>
             
         </div>
 
