add logo and size adjustment

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>High Card</title>
 </head>
 <body>
-    <h1 class="heading">High Card</h1>
+    <h1 class="heading">High Card <img class="logo" src="assets/images/cardsfull.png" alt="High Card!"></h1>
 
     <div class="game-area">
         <p>Press play to draw a card, the one who gets the highest card wins!</p>
