fix more code in random card function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
             <div class="cpucard"><img src="assets/images/cardb.png" alt="Backside of the Card."><p>CPU</p></div>
 
-            <div class="btn-div">Start <button class="btn">Play</button></div>
+            <div class="btn-div">Start <button onclick="randomCard()" class="btn">Play</button></div>
             
         </div>
 
