code function to randomize card

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="game-area">
         <p>Press play to draw a card, the one who gets the highest card wins!</p>
         <div class="card-area">
-            <div class="playercard"><img src="assets/images/cardb.png" alt="Backside of the Card."><p>YOU</p></div>
+            <div class="playercard"><p>YOU</p></div>
             
-            <div class="cpucard"><img src="assets/images/cardb.png" alt="Backside of the Card."><p>CPU</p></div>
+            <div class="cpucard" onclick="rndCard()"><p>CPU</p></div>
 
             <div class="btn-div">Start <button onclick="randomCard()" class="btn">Play</button></div>
             
