fix playercard div

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div class="game-area">
         <p>Press play to draw a card, the one who gets the highest card wins!</p>
         <div class="card-area">
-            <div class="playercard"><p>YOU</p></div>
+            <div id="playercard"><p>YOU</p></div>
             
-            <div class="cpucard" onclick="rndCard()"><p>CPU</p></div>
+            <div id="cpucard"><p>CPU</p></div>
 
-            <div class="btn-div">Start <button onclick="randomCard()" class="btn">Play</button></div>
+            <div class="btn-div">Start <button onclick="rndCard()" class="btn">Play</button></div>
             
         </div>
 
