fix score system

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </div>
 
     <div class="score-area">Score Area
-        <p class="scores">Player Score: <span id="playerscore">0</span></p>
-        <p class="scores">CPU Score: <span id="cpuscore">0</span></p>
+        <p class="scores">Player Score: <span id="playerscore"></span></p>
+        <p class="scores">CPU Score: <span id="cpuscore"></span></p>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
