--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             
             <div id="cpucard"><p>CPU</p></div>
 
-            <div class="btn-div">Start <button onclick="rndCard()" class="btn">Play</button></div>
+            <div class="btn-div">Start <button onclick="rndCard()" class="btn">Play</button>
+            <p>Player Wins!</p>
+            </div>
             
         </div>
 
