--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="cpucard"><p>CPU</p></div>
 
             <div class="btn-div">Start <button onclick="rndCard()" class="btn">Play</button>
-            <p>Player Wins!</p>
+            <p id="winner"></p>
             </div>
             
         </div>
