add 'draw' text function

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     </div>
     
-    <div class="score-area">Score Area
+    <div class="score-area"><p>Score Area</p>
         <p class="scores">Player Score: <span id="playerscore"></span></p>
         <p class="scores">CPU Score: <span id="cpuscore"></span></p>
     </div>
