--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>High Card</title>
+    <link rel="icon" href="assets/images/favicon.ico">
 </head>
 <body>
     <h1 class="heading">High Card <img class="logo" src="assets/images/cardsfull.png" alt="High Card!"></h1>
