start responsive design coding

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <div id="cpucard"><p>CPU</p></div>
 
-            <div class="btn-div">Start <button onclick="rndCard()" class="btn">Play</button>
+            <div class="btn-div">Start <button onclick="rndCard()" id="btn">Play</button>
             <p id="winner"></p>
             </div>
             
