remove start card img

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="game-area">
         <p>Press play to draw a card, the one who gets the highest card wins!</p>
         <div class="card-area">
-            <div id="playercard"><p><img id="startcard" src="assets/images/hearts03.png" alt=""></p></div>
+            <div id="playercard"><p>YOU</p></div>
             
-            <div id="cpucard"><p><img id="startcard" src="assets/images/hearts07.png" alt=""></p></div>
+            <div id="cpucard"><p>CPU</p></div>
 
             <div class="btn-div">Start <button onclick="rndCard()" id="btn">Play</button>
             <p id="winner"></p>
